# slycat

./: .babelrc  .codeclimate.yml  .eslintrc  .gitignore  .prettierignore  .prettierrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  COPYRIGHT.md  Developer-guide.md  LICENSE  LICENSE.md  Pipfile  README.md  ThirdPartyLicenses.xlsx  conf.py  eslint.config.mjs  front-end-config.md  jest.config.js  notes.txt  package-lock.json  package.json  process-compilation-stats-json.js  proxy-server-config.conf  pyproject.toml  regression.py  requirements.txt  run_prod_write_versions.js  setup.cfg  setup.py  stats-slycat_production_node_modules_debug.json  stats.js  test-config.ini  travisyml.old  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.myslycat.js  (+4 more)
agent/: README.md  agent.py  hdf5.py  parse_frames.py  slycat-agent-compute-timeseries.py  slycat-agent-create-image-distance-matrix.py  slycat-agent.py  slycat-docker-agent.py  slycat-img-to-video.py  slycat-pbs-agent.py  slycat-slurm-agent.py  slycat-timeseries-to-hdf5.py  slycat-xyce-timeseries-to-hdf5.py  test_run_remote_command.py  timeseries_util.py  trrc.py
analysis/: slycat-coordinator.py  tests.py
analysis-server/: plugin-test.py  redimension.py  slycat-analysis-coordinator.py  slycat-analysis-worker.py  test-cca-homegrown.py  test-cca-sklearn.py  test-cca-titan.py  test-cca.py  tests.py
artwork/: slycat-logo-mirror.ai  slycat-logo-navbar.ai  slycat-logo.ai  system-diagram.graffle
cca-barplot-proof-of-concept/: cca-barplot-proof-of-concept.css  cca-barplot-proof-of-concept.html  (+1 more)
(+6890 files in other folders)
