[tool.poetry]
name = "slycat-env"
version = "3.3.3"
description = ""
authors = ["Matthew Letter <mletter@sandia.gov>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
CherryPy = "^18.6.1"
numpy = "^1.22.3"
paramiko = "^2.10.3"
pkgconfig = "^1.5.5"
h5py = "^3.6.0"
pyparsing = "^3.0.7"
CouchDB = "^1.2"
configparser = "^5.2.0"
future = "^0.18.2"
Routes = "^2.5.1"
scipy = "^1.8.0"
sklearn = "^0.0"
npTDMS = "^1.4.0"
pandas = "^1.4.1"
pysmb = "^1.2.7"
setuptools = "^65.5.1"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
slycat = { path = "packages/slycat", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
